# hue_old

./: .gitmodules  CMakeLists.txt
src/: BridgeConfig.cpp  BridgeConfig.h  BridgeRenderer.cpp  BridgeRenderer.h  Config.cpp  Config.h  MultiBridgeRenderer.cpp  MultiBridgeRenderer.h  RainbowEffect.cpp  RainbowEffect.h  RainbowRenderer.cpp  RainbowRenderer.h  RenderEffect.cpp  RenderEffect.h  Terminal.cpp  Terminal.h  config.csv  main.cpp
